--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.1",
+    "bootstrap-icons": "^1.9.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.4.1"
   },
   "devDependencies": {
