--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-router-bootstrap": "^0.24.5",
     "bootstrap": "^5.2.1",
     "bootstrap-icons": "^1.9.1",
     "react": "^18.2.0",
